feat: apply spotless to format code, complete team notification setting service.